# panda-monitor

./: .gitignore  Cargo.toml
agent/: Cargo.toml  build.rs
agent/src/: command.rs  fetch_ip.rs  main.rs  monitor.rs  server_monitor_info_upload.rs  system_info.rs
agent/src/dto/: ip_sb.rs  ipapi.rs  ipip.rs
agent/src/utils/: http_util.rs
backend/: Cargo.toml
backend/src/: main.rs  rpc_service.rs  server_monitor_service.rs  ws_handler.rs
common/: Cargo.toml  build.rs
common/proto/: panda_monitor.proto
common/src/: lib.rs
