[workspace]
members = ["backend", "agent", "common"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["full", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
