[workspace]
members = ["backend", "agent", "common"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }