[package]
name = "agent"
version = "0.1.0"
edition = "2021"
authors = ["zzwtsy <zzwtsy@yumdeb.top>"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true }
common = { path = "../common" }
clap = { version = "4.5", features = ["derive", "unicode", "env"] }
sysinfo = { version = "0.32" }
