[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["zzwtsy <zzwtsy@yumdeb.top>"]

[dependencies]
anyhow = { workspace = true }
salvo = { version = "0.74", features = ["websocket", "session"] }
tracing = "0.1"
tracing-subscriber = "0.3"
common = { path = "../common" }
tonic = { workspace = true }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
jsonwebtoken = { workspace = true }
